# lean-lite

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_strategy_compatibility.py
docker/: Dockerfile  docker-compose.yml
docs/: data_pipeline.md
examples/: data_pipeline_example.py  simple_data_example.py
src/: __init__.py  main.py
src/lean_lite/: __init__.py  config.py
src/lean_lite/algorithm/: __init__.py  algorithm_framework.py  base_algorithm.py  data_models.py  orders.py  qc_algorithm.py
src/lean_lite/brokers/: __init__.py  base_broker.py
src/lean_lite/data/: __init__.py  alpaca_data.py  alpaca_feed.py  data_engine.py  data_manager.py  simple_data_engine.py  simple_data_pipeline.md
src/lean_lite/engine/: __init__.py  lean_engine.py
src/lean_lite/indicators/: __init__.py  base_indicator.py  moving_averages.py  oscillators.py
strategies/: __init__.py  example_strategy.py  qc_example_strategy.py
tests/: __init__.py  test_alpaca_data.py  test_config.py  test_core_integration.py  test_data_models.py  test_data_pipeline.py  test_orders.py  test_qc_algorithm.py  test_simple_data_pipeline.py  test_snake_case_aliases.py  verify_project_structure.py
