[tool.poetry]
name = "lean-lite"
version = "0.1.0"
description = "A lightweight QuantConnect LEAN runtime for algorithmic trading"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "lean_lite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
alpaca-py = "^0.35.0"
websocket-client = "^1.6.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 